<resources>
    <string name="app_name">SegundaEntrega</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_name">Daniel Valdebenito</string>
    <string name="profile_age">21 Años</string>
    <string name="profile_phone">+56 9 45281079</string>
    <string name="profile_email">valdebenito.daniel2507@gmail.com</string>
</resources>